--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOvfGEtdY/P06j95yataIvz",
+      "authorship_tag": "ABX9TyMcWVOEUhJp2JcxZXjdk3WL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1557,10 +1557,126 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Diffusion Model\n"
+      ],
+      "metadata": {
+        "id": "z_dFXODJDKzP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Purpose: Implement a simplified Denoising Diffusion Probabilistic Model (DDPM) for segmentation.\n",
+        "class DiffusionModel(keras.Model):\n",
+        "    def __init__(self, timesteps=1000, img_size=(128, 128, 1)):\n",
+        "        super(DiffusionModel, self).__init__()\n",
+        "        self.timesteps = timesteps\n",
+        "        self.img_size = img_size\n",
+        "\n",
+        "        # U-Net-like architecture for noise prediction\n",
+        "        self.model = self.build_unet()\n",
+        "\n",
+        "        # Define beta schedule\n",
+        "        self.betas = tf.linspace(1e-4, 0.02, timesteps)\n",
+        "        self.alphas = 1.0 - self.betas\n",
+        "        self.alpha_bars = tf.math.cumprod(self.alphas)\n",
+        "\n",
+        "    def build_unet(self):\n",
+        "        inputs = keras.layers.Input(shape=(*self.img_size, 1))\n",
+        "        time_input = keras.layers.Input(shape=(1,))\n",
+        "\n",
+        "        # Time embedding\n",
+        "        t_emb = keras.layers.Dense(128)(time_input)\n",
+        "        t_emb = keras.layers.Activation('relu')(t_emb)\n",
+        "\n",
+        "        # Encoder\n",
+        "        x = keras.layers.Conv2D(64, 3, padding='same', activation='relu')(inputs)\n",
+        "        x1 = keras.layers.Conv2D(64, 3, padding='same', activation='relu')(x)\n",
+        "        x = keras.layers.MaxPooling2D()(x1)\n",
+        "        x = keras.layers.Conv2D(128, 3, padding='same', activation='relu')(x)\n",
+        "        x2 = keras.layers.Conv2D(128, 3, padding='same', activation='relu')(x)\n",
+        "        x = keras.layers.MaxPooling2D()(x2)\n",
+        "        x = keras.layers.Conv2D(256, 3, padding='same', activation='relu')(x)\n",
+        "\n",
+        "        # Middle\n",
+        "        x = keras.layers.Conv2D(256, 3, padding='same', activation='relu')(x)\n",
+        "        x = keras.layers.Add()([x, keras.layers.Dense(256)(t_emb)[:, None, None, :]])\n",
+        "\n",
+        "        # Decoder\n",
+        "        x = keras.layers.UpSampling2D()(x)\n",
+        "        x = keras.layers.Concatenate()([x, x2])\n",
+        "        x = keras.layers.Conv2D(128, 3, padding='same', activation='relu')(x)\n",
+        "        x = keras.layers.Conv2D(128, 3, padding='same', activation='relu')(x)\n",
+        "        x = keras.layers.UpSampling2D()(x)\n",
+        "        x = keras.layers.Concatenate()([x, x1])\n",
+        "        x = keras.layers.Conv2D(64, 3, padding='same', activation='relu')(x)\n",
+        "        x = keras.layers.Conv2D(64, 3, padding='same', activation='relu')(x)\n",
+        "\n",
+        "        outputs = keras.layers.Conv2D(1, 3, padding='same', activation='sigmoid')(x)\n",
+        "        return keras.models.Model([inputs, time_input], outputs)\n",
+        "\n",
+        "    def call(self, inputs, t):\n",
+        "        return self.model([inputs, t])\n",
+        "\n",
+        "    def add_noise(self, x, t):\n",
+        "        sqrt_alpha_bar = tf.sqrt(self.alpha_bars[t])[:, None, None, None]\n",
+        "        sqrt_one_minus_alpha_bar = tf.sqrt(1.0 - self.alpha_bars[t])[:, None, None, None]\n",
+        "        noise = tf.random.normal(tf.shape(x))\n",
+        "        return sqrt_alpha_bar * x + sqrt_one_minus_alpha_bar * noise, noise\n",
+        "\n",
+        "    def train_step(self, data):\n",
+        "        x, y = data\n",
+        "        batch_size = tf.shape(x)[0]\n",
+        "        t = tf.random.uniform([batch_size], 0, self.timesteps, dtype=tf.int32)\n",
+        "\n",
+        "        x_noisy, noise = self.add_noise(y, t)\n",
+        "        with tf.GradientTape() as tape:\n",
+        "            predicted_noise = self([x_noisy, tf.cast(t, tf.float32) / self.timesteps], training=True)\n",
+        "            loss = tf.reduce_mean(tf.square(noise - predicted_noise))\n",
+        "\n",
+        "        gradients = tape.gradient(loss, self.trainable_variables)\n",
+        "        self.optimizer.apply_gradients(zip(gradients, self.trainable_variables))\n",
+        "        return {'loss': loss}\n",
+        "\n",
+        "diffusion_model = DiffusionModel(timesteps=1000)\n",
+        "diffusion_model.compile(optimizer=keras.optimizers.Adam(learning_rate=1e-4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        },
+        "id": "dpy9-PZiDENg",
+        "outputId": "a730e9e3-072f-45e7-8488-3d0b124d2303"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "Kernel shape must have the same length as input, but received kernel of shape (3, 3, 1, 64) and input of shape (None, 128, 128, 1, 1).",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-28ad1c35fddc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'loss'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m \u001b[0mdiffusion_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDiffusionModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimesteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m \u001b[0mdiffusion_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-28ad1c35fddc>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, timesteps, img_size)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;31m# U-Net-like architecture for noise prediction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_unet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;31m# Define beta schedule\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-28ad1c35fddc>\u001b[0m in \u001b[0;36mbuild_unet\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;31m# Encoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'same'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0mx1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'same'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    120\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m             \u001b[0;31m# `keras.config.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/ops/operation_utils.py\u001b[0m in \u001b[0;36mcompute_conv_output_shape\u001b[0;34m(input_shape, filters, kernel_size, strides, padding, data_format, dilation_rate)\u001b[0m\n\u001b[1;32m    182\u001b[0m         \u001b[0mkernel_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkernel_size\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    183\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel_shape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 184\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m    185\u001b[0m             \u001b[0;34m\"Kernel shape must have the same length as input, but received \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m             \u001b[0;34mf\"kernel of shape {kernel_shape} and \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Kernel shape must have the same length as input, but received kernel of shape (3, 3, 1, 64) and input of shape (None, 128, 128, 1, 1)."
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "hPagn_DECzs4"
-      }
+        "id": "r6bo1bHNDRT9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
