--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO1+Hli4+Bfg7l+DJerFJEX",
+      "authorship_tag": "ABX9TyPwi/NRlp2FFPqMemhW2F4E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1563,6 +1563,111 @@
       "metadata": {
         "id": "z_dFXODJDKzP"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cell 6: Diffusion Model\n",
+        "# Purpose: Implement a simplified diffusion model for hippocampus segmentation, inspired by Stable Diffusion.\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "class DiffusionModel(keras.Model):\n",
+        "    def __init__(self, timesteps=100, img_size=(128, 128)):\n",
+        "        super(DiffusionModel, self).__init__()\n",
+        "        self.timesteps = timesteps\n",
+        "        self.img_size = img_size\n",
+        "\n",
+        "        # U-Net for noise prediction\n",
+        "        self.unet = self.build_unet()\n",
+        "\n",
+        "        # Beta schedule\n",
+        "        self.betas = tf.linspace(1e-4, 0.02, timesteps)\n",
+        "        self.alphas = 1.0 - self.betas\n",
+        "        self.alpha_bars = tf.math.cumprod(self.alphas)\n",
+        "\n",
+        "    def build_unet(self):\n",
+        "        # Inputs\n",
+        "        mask_input = layers.Input(shape=(*self.img_size, 1))  # Noisy mask: (None, 128, 128, 1)\n",
+        "        image_input = layers.Input(shape=(*self.img_size, 3))  # MRI image: (None, 128, 128, 3)\n",
+        "        time_input = layers.Input(shape=(1,))  # Timestep: (None, 1)\n",
+        "\n",
+        "        # Time embedding\n",
+        "        t_emb = layers.Dense(128, activation='relu')(time_input)  # (None, 128)\n",
+        "        t_emb = layers.Dense(256, activation='relu')(t_emb)  # (None, 256)\n",
+        "        t_emb = layers.Reshape((1, 1, 256))(t_emb)  # (None, 1, 1, 256)\n",
+        "        t_emb = layers.UpSampling2D(size=(128, 128))(t_emb)  # (None, 128, 128, 256)\n",
+        "\n",
+        "        # Image preprocessing\n",
+        "        img = layers.Conv2D(64, 3, padding='same', activation='relu')(image_input)  # (None, 128, 128, 64)\n",
+        "\n",
+        "        # Encoder\n",
+        "        x = layers.Concatenate()([mask_input, img])  # (None, 128, 128, 65)\n",
+        "        x1 = layers.Conv2D(64, 3, padding='same', activation='relu')(x)  # (None, 128, 128, 64)\n",
+        "        x = layers.MaxPooling2D()(x1)  # (None, 64, 64, 64)\n",
+        "        x2 = layers.Conv2D(128, 3, padding='same', activation='relu')(x)  # (None, 64, 64, 128)\n",
+        "        x = layers.MaxPooling2D()(x2)  # (None, 32, 32, 128)\n",
+        "        x = layers.Conv2D(256, 3, padding='same', activation='relu')(x)  # (None, 32, 32, 256)\n",
+        "\n",
+        "        # Middle\n",
+        "        x = layers.Conv2D(256, 3, padding='same', activation='relu')(x)  # (None, 32, 32, 256)\n",
+        "        x = layers.Add()([x, layers.Conv2D(256, 1, padding='same')(t_emb[:, :32, :32, :])])  # (None, 32, 32, 256)\n",
+        "\n",
+        "        # Decoder\n",
+        "        x = layers.UpSampling2D()(x)  # (None, 64, 64, 256)\n",
+        "        x = layers.Concatenate()([x, x2])  # (None, 64, 64, 384)\n",
+        "        x = layers.Conv2D(128, 3, padding='same', activation='relu')(x)  # (None, 64, 64, 128)\n",
+        "        x = layers.UpSampling2D()(x)  # (None, 128, 128, 128)\n",
+        "        x = layers.Concatenate()([x, x1])  # (None, 128, 128, 192)\n",
+        "        x = layers.Conv2D(64, 3, padding='same', activation='relu')(x)  # (None, 128, 128, 64)\n",
+        "\n",
+        "        # Output: predicted noise\n",
+        "        outputs = layers.Conv2D(1, 3, padding='same', activation='linear')(x)  # (None, 128, 128, 1)\n",
+        "        return keras.models.Model([mask_input, image_input, time_input], outputs)\n",
+        "\n",
+        "    def call(self, inputs, training=False):\n",
+        "        mask, image, t = inputs\n",
+        "        return self.unet([mask, image, t], training=training)\n",
+        "\n",
+        "    def train_step(self, data):\n",
+        "        x, y = data  # x: images (None, 128, 128, 3), y: masks (None, 128, 128, 1)\n",
+        "        batch_size = tf.shape(x)[0]\n",
+        "        t = tf.random.uniform([batch_size], 0, self.timesteps, dtype=tf.int32)\n",
+        "\n",
+        "        # Add noise\n",
+        "        sqrt_alpha_bar = tf.sqrt(tf.gather(self.alpha_bars, t))[:, None, None, None]\n",
+        "        sqrt_one_minus_alpha_bar = tf.sqrt(1.0 - tf.gather(self.alpha_bars, t))[:, None, None, None]\n",
+        "        noise = tf.random.normal(tf.shape(y))\n",
+        "        y_noisy = sqrt_alpha_bar * y + sqrt_one_minus_alpha_bar * noise\n",
+        "\n",
+        "        with tf.GradientTape() as tape:\n",
+        "            predicted_noise = self([y_noisy, x, tf.cast(t, tf.float32) / self.timesteps], training=True)\n",
+        "            loss = tf.reduce_mean(tf.square(noise - predicted_noise))\n",
+        "\n",
+        "        gradients = tape.gradient(loss, self.trainable_variables)\n",
+        "        self.optimizer.apply_gradients(zip(gradients, self.trainable_variables))\n",
+        "        return {'loss': loss}\n",
+        "\n",
+        "    def generate(self, images, steps=50):\n",
+        "        x_t = tf.random.normal([images.shape[0], *self.img_size, 1])\n",
+        "        for t in range(steps - 1, -1, -1):\n",
+        "            t_tensor = tf.ones([images.shape[0]], dtype=tf.float32) * t\n",
+        "            predicted_noise = self([x_t, images, t_tensor / self.timesteps], training=False)\n",
+        "            alpha = tf.gather(self.alphas, t)\n",
+        "            alpha_bar = tf.gather(self.alpha_bars, t)\n",
+        "            x_t = (x_t - ((1 - alpha) / tf.sqrt(1 - alpha_bar)) * predicted_noise) / tf.sqrt(alpha)\n",
+        "        return tf.clip_by_value(x_t, 0, 1)\n",
+        "\n",
+        "# Instantiate and compile\n",
+        "diffusion_model = DiffusionModel(timesteps=100)\n",
+        "diffusion_model.compile(optimizer=keras.optimizers.Adam(learning_rate=1e-4))"
+      ],
+      "metadata": {
+        "id": "OxQKUL6ycmpo"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
