--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNPfZdYpREWICM/ODmNHxoK",
+      "authorship_tag": "ABX9TyOUPzZMTdZg/57T1Aoh0HtP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1670,10 +1670,60 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Training\n"
+      ],
+      "metadata": {
+        "id": "0seLDrgOl6Bj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Purpose: Train both ResUNet and Diffusion models, saving to Google Drive.\n",
+        "from sklearn.utils import shuffle\n",
+        "import os\n",
+        "\n",
+        "# Handle small dataset\n",
+        "if X_train.shape[0] < 10:\n",
+        "    print(\"Small dataset detected. Using all data for training.\")\n",
+        "    X_test, Y_test = X_train, Y_train\n",
+        "else:\n",
+        "    X_train, Y_train = shuffle(X_train, Y_train, random_state=seed)\n",
+        "    from sklearn.model_selection import train_test_split\n",
+        "    X_train, X_test, Y_train, Y_test = train_test_split(X_train, Y_train, test_size=0.1, random_state=seed)\n",
+        "    print(f\"X_train shape: {X_train.shape}, X_test shape: {X_test.shape}\")\n",
+        "\n",
+        "# ResUNet training\n",
+        "batch_size = min(4, X_train.shape[0])\n",
+        "callbacks = [\n",
+        "    keras.callbacks.ModelCheckpoint(os.path.join(drive_model_path, 'ResUNet.h5'), verbose=1, save_best_only=True),\n",
+        "    keras.callbacks.EarlyStopping(patience=10, monitor='val_loss'),\n",
+        "    keras.callbacks.TensorBoard(log_dir='logs_resunet')\n",
+        "]\n",
+        "\n",
+        "if X_train.shape[0] > 0:\n",
+        "    resunet_results = resunet_model.fit(X_train, Y_train, validation_split=0.2, shuffle=True, batch_size=batch_size, epochs=20, callbacks=callbacks)\n",
+        "\n",
+        "# Diffusion training\n",
+        "if X_train.shape[0] > 0:\n",
+        "    diffusion_results = diffusion_model.fit([X_train, Y_train], Y_train, batch_size=batch_size, epochs=20, validation_split=0.2)\n",
+        "\n",
+        "# Save Diffusion model\n",
+        "diffusion_model.save(os.path.join(drive_model_path, 'DiffusionModel'))"
+      ],
+      "metadata": {
+        "id": "7_bM_yEIli7T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7_bM_yEIli7T"
+        "id": "fw2IovFMl2P5"
       },
       "execution_count": null,
       "outputs": []
