# Cell 1: Setup and Imports

--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPZvetwdq09BsdDyUv0nJ5",
+      "authorship_tag": "ABX9TyORD0M33SDfQiMNAiD54hyi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,48 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "WCUmjTwnqVOk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WCUmjTwnqVOk",
+        "outputId": "7cd1d274-cf21-4870-c2fb-fb95b14baf36"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/50.7 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.7/50.7 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
+      "source": [
+        "# Purpose: Install required packages, import libraries, and configure the environment.\n",
+        "!pip install segmentation-models -q\n",
+        "import os\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.utils import shuffle\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "import segmentation_models as sm\n",
+        "import cv2\n",
+        "import zipfile\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "seed = 42\n",
+        "np.random.seed(seed)\n",
+        "tf.random.set_seed(seed)\n",
+        "sm.set_framework('tf.keras')\n",
+        "sm.framework()\n",
+        "print(\"Environment setup complete.\")"
+      ]
     }
   ]
 }
