--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORD0M33SDfQiMNAiD54hyi",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOQ7cSwclrhvIMgOWekdd1i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,27 +30,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WCUmjTwnqVOk",
-        "outputId": "7cd1d274-cf21-4870-c2fb-fb95b14baf36"
+        "outputId": "e2282472-82cc-472f-fe11-1f2aefc52c4d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/50.7 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.7/50.7 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
+            "Mounted at /content/drive\n",
+            "TensorFlow version: 2.18.0\n",
+            "Environment setup complete.\n"
           ]
         }
       ],
       "source": [
-        "# Purpose: Install required packages, import libraries, and configure the environment.\n",
-        "!pip install segmentation-models -q\n",
+        "# Cell 1: Setup and Imports\n",
+        "# Purpose: Import libraries, mount Google Drive, and set random seed.\n",
         "import os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -60,7 +63,7 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
-        "import segmentation_models as sm\n",
+        "from tensorflow.keras.applications import ResNet50\n",
         "import cv2\n",
         "import zipfile\n",
         "from google.colab import drive\n",
@@ -68,10 +71,27 @@
         "seed = 42\n",
         "np.random.seed(seed)\n",
         "tf.random.set_seed(seed)\n",
-        "sm.set_framework('tf.keras')\n",
-        "sm.framework()\n",
+        "print(f\"TensorFlow version: {tf.__version__}\")\n",
         "print(\"Environment setup complete.\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Define Metrics"
+      ],
+      "metadata": {
+        "id": "_2aPo7SEzRAy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vhUhx3zMzIQK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
