--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOQ7cSwclrhvIMgOWekdd1i",
+      "authorship_tag": "ABX9TyOjB1uaFMx60ZmAxEbMfAU4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,12 +86,120 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Purpose: Define custom metrics for segmentation evaluation (Dice, IoU, precision, recall).\n",
+        "def dice_coef(y_true, y_pred, smooth=1e-6):\n",
+        "    y_true_f = tf.keras.backend.flatten(y_true)\n",
+        "    y_pred_f = tf.keras.backend.flatten(y_pred)\n",
+        "    intersection = tf.keras.backend.sum(y_true_f * y_pred_f)\n",
+        "    return (2. * intersection + smooth) / (tf.keras.backend.sum(y_true_f) + tf.keras.backend.sum(y_pred_f) + smooth)\n",
+        "\n",
+        "def iou(y_true, y_pred, smooth=1e-6):\n",
+        "    y_true_f = tf.keras.backend.flatten(y_true)\n",
+        "    y_pred_f = tf.keras.backend.flatten(y_pred)\n",
+        "    intersection = tf.keras.backend.sum(y_true_f * y_pred_f)\n",
+        "    union = tf.keras.backend.sum(y_true_f) + tf.keras.backend.sum(y_pred_f) - intersection\n",
+        "    return (intersection + smooth) / (union + smooth)\n",
+        "\n",
+        "def compute_metrics(y_true, y_pred, threshold=0.5):\n",
+        "    y_pred_bin = (y_pred > threshold).astype(np.float32)\n",
+        "    dice = dice_coef(y_true, y_pred_bin).numpy()\n",
+        "    iou_score = iou(y_true, y_pred_bin).numpy()\n",
+        "    y_true_f = y_true.flatten()\n",
+        "    y_pred_f = y_pred_bin.flatten()\n",
+        "    precision = np.sum(y_true_f * y_pred_f) / (np.sum(y_pred_f) + 1e-6)\n",
+        "    recall = np.sum(y_true_f * y_pred_f) / (np.sum(y_true_f) + 1e-6)\n",
+        "    return dice, iou_score, precision, recall\n",
+        "\n",
+        "print(\"Metrics defined: Dice, IoU, Precision, Recall\")"
+      ],
       "metadata": {
-        "id": "vhUhx3zMzIQK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vhUhx3zMzIQK",
+        "outputId": "9a1b968c-a7f3-4dee-b6bb-3783a5d1bd2e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Metrics defined: Dice, IoU, Precision, Recall\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Loading"
+      ],
+      "metadata": {
+        "id": "JS6x8DFXzc-3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Purpose: Load and preprocess hippocampus MRI images and masks from zip file.\n",
+        "def load_image(img_path, target_size=(128, 128)):\n",
+        "    img = cv2.imread(img_path, cv2.IMREAD_COLOR)\n",
+        "    img = cv2.resize(img, target_size)\n",
+        "    img = img / 255.0\n",
+        "    return img.astype(np.float32)\n",
+        "\n",
+        "def load_mask(mask_path, target_size=(128, 128)):\n",
+        "    mask = cv2.imread(mask_path, cv2.IMREAD_GRAYSCALE)\n",
+        "    mask = cv2.resize(mask, target_size)\n",
+        "    mask = (mask > 0).astype(np.float32)\n",
+        "    mask = mask[:, :, np.newaxis]\n",
+        "    return mask\n",
+        "\n",
+        "# Unzip dataset\n",
+        "zip_path = '/content/hippocampus segmentation dataset.zip'\n",
+        "extract_path = '/content/hippocampus_dataset'\n",
+        "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+        "    zip_ref.extractall(extract_path)\n",
+        "\n",
+        "# Load images and masks\n",
+        "image_files = sorted([f for f in os.listdir(extract_path) if f.endswith('.jpg') and 'mask' not in f])\n",
+        "mask_files = sorted([f for f in os.listdir(extract_path) if 'mask' in f])\n",
+        "train_data = [(os.path.join(extract_path, img), os.path.join(extract_path, msk))\n",
+        "              for img, msk in zip(image_files, mask_files)]\n",
+        "\n",
+        "X = np.array([load_image(img_path) for img_path, _ in train_data])\n",
+        "Y = np.array([load_mask(mask_path) for _, mask_path in train_data])\n",
+        "\n",
+        "# Split data\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=seed)\n",
+        "print(f\"X_train shape: {X_train.shape}, X_test shape: {X_test.shape}\")\n",
+        "print(f\"Y_train shape: {Y_train.shape}, Y_test shape: {Y_test.shape}\")"
+      ],
+      "metadata": {
+        "id": "3BQo24Ttzf3N",
+        "outputId": "81623f0b-f042-4e4b-e0af-55d3bd7d7a97",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/content/hippocampus segmentation dataset.zip'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-9bae0b13669a>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mzip_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/content/hippocampus segmentation dataset.zip'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mextract_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/content/hippocampus_dataset'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mzipfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mzip_ref\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mzip_ref\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mextract_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.11/zipfile.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps, metadata_encoding)\u001b[0m\n\u001b[1;32m   1293\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1294\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1295\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilemode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1296\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1297\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mfilemode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodeDict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/hippocampus segmentation dataset.zip'"
+          ]
+        }
+      ]
     }
   ]
 }
