--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN9qC582VIFmvj/Se+tQ/me",
+      "authorship_tag": "ABX9TyNh8eYDbwLs2HCSsZpowiDN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,15 +143,20 @@
     {
       "cell_type": "code",
       "source": [
+        "# Cell 3: Data Loading\n",
         "# Purpose: Load and preprocess hippocampus MRI images and masks from zip file.\n",
         "def load_image(img_path, target_size=(128, 128)):\n",
         "    img = cv2.imread(img_path, cv2.IMREAD_COLOR)\n",
+        "    if img is None:\n",
+        "        raise ValueError(f\"Failed to load image: {img_path}\")\n",
         "    img = cv2.resize(img, target_size)\n",
         "    img = img / 255.0\n",
         "    return img.astype(np.float32)\n",
         "\n",
         "def load_mask(mask_path, target_size=(128, 128)):\n",
         "    mask = cv2.imread(mask_path, cv2.IMREAD_GRAYSCALE)\n",
+        "    if mask is None:\n",
+        "        raise ValueError(f\"Failed to load mask: {mask_path}\")\n",
         "    mask = cv2.resize(mask, target_size)\n",
         "    mask = (mask > 0).astype(np.float32)\n",
         "    mask = mask[:, :, np.newaxis]\n",
@@ -160,45 +165,94 @@
         "# Unzip dataset\n",
         "zip_path = '/content/hippocampus segmentation dataset.zip'\n",
         "extract_path = '/content/hippocampus_dataset'\n",
+        "if not os.path.exists(zip_path):\n",
+        "    raise FileNotFoundError(f\"Zip file not found: {zip_path}\")\n",
         "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
         "    zip_ref.extractall(extract_path)\n",
         "\n",
-        "# Load images and masks\n",
-        "image_files = sorted([f for f in os.listdir(extract_path) if f.endswith('.jpg') and 'mask' not in f])\n",
-        "mask_files = sorted([f for f in os.listdir(extract_path) if 'mask' in f])\n",
-        "train_data = [(os.path.join(extract_path, img), os.path.join(extract_path, msk))\n",
-        "              for img, msk in zip(image_files, mask_files)]\n",
+        "# Recursive file search\n",
+        "def find_files(directory, extensions):\n",
+        "    files = []\n",
+        "    for root, _, filenames in os.walk(directory):\n",
+        "        for f in filenames:\n",
+        "            if any(f.lower().endswith(ext) for ext in extensions):\n",
+        "                files.append(os.path.join(root, f))\n",
+        "    return sorted(files)\n",
         "\n",
+        "# Find images and masks\n",
+        "image_extensions = ('.jpg', '.jpeg', '.png')\n",
+        "mask_extensions = ('.jpg', '.jpeg', '.png')\n",
+        "all_files = find_files(extract_path, image_extensions + mask_extensions)\n",
+        "image_files = [f for f in all_files if not any(kw in os.path.basename(f).lower() for kw in ['mask', '_mask', 'seg', 'segmentation'])]\n",
+        "mask_files = [f for f in all_files if any(kw in os.path.basename(f).lower() for kw in ['mask', '_mask', 'seg', 'segmentation'])]\n",
+        "\n",
+        "# Debug prints\n",
+        "print(f\"Found {len(image_files)} image files, {len(mask_files)} mask files\")\n",
+        "if image_files:\n",
+        "    print(\"Sample images:\", image_files[:3])\n",
+        "if mask_files:\n",
+        "    print(\"Sample masks:\", mask_files[:3])\n",
+        "\n",
+        "# Pair images and masks\n",
+        "train_data = []\n",
+        "if len(image_files) == len(mask_files):\n",
+        "    # Try index-based pairing if equal number of files\n",
+        "    print(\"Attempting index-based pairing (sorted files)\")\n",
+        "    train_data = list(zip(image_files, mask_files))\n",
+        "else:\n",
+        "    # Flexible name-based pairing\n",
+        "    print(\"Attempting name-based pairing\")\n",
+        "    for img in image_files:\n",
+        "        img_name = os.path.basename(img).lower().split('.')[0]\n",
+        "        for mask in mask_files:\n",
+        "            mask_name = os.path.basename(mask).lower().split('.')[0]\n",
+        "            # Match if names share a common identifier\n",
+        "            if img_name.replace('img', '') in mask_name or mask_name.replace('mask', '').replace('seg', '') in img_name:\n",
+        "                train_data.append((img, mask))\n",
+        "                break\n",
+        "            # Alternative: Replace 'img' with 'mask' or 'seg'\n",
+        "            if img_name.replace('img', 'mask') == mask_name or img_name.replace('img', 'seg') == mask_name:\n",
+        "                train_data.append((img, mask))\n",
+        "                break\n",
+        "\n",
+        "print(f\"Paired {len(train_data)} image-mask pairs\")\n",
+        "if not train_data:\n",
+        "    # Debug unmatched files\n",
+        "    print(\"Unmatched images:\", [os.path.basename(f) for f in image_files[:5]])\n",
+        "    print(\"Unmatched masks:\", [os.path.basename(f) for f in mask_files[:5]])\n",
+        "    raise ValueError(\"No image-mask pairs found. Check file names or directory structure. See unmatched files above.\")\n",
+        "\n",
+        "# Load data\n",
         "X = np.array([load_image(img_path) for img_path, _ in train_data])\n",
         "Y = np.array([load_mask(mask_path) for _, mask_path in train_data])\n",
         "\n",
         "# Split data\n",
+        "if X.shape[0] == 0:\n",
+        "    raise ValueError(\"No data loaded. Cannot proceed with empty dataset.\")\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=seed)\n",
         "print(f\"X_train shape: {X_train.shape}, X_test shape: {X_test.shape}\")\n",
         "print(f\"Y_train shape: {Y_train.shape}, Y_test shape: {Y_test.shape}\")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "3BQo24Ttzf3N",
-        "outputId": "952a6ff3-7054-41b6-d298-dbe12cdf7db7"
+        "id": "qy9pP-L901Lw",
+        "outputId": "dbdec6a1-ed09-4435-ce5a-8cb4d4d7a583"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "With n_samples=0, test_size=0.1 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters.",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-9bae0b13669a>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;31m# Split data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"X_train shape: {X_train.shape}, X_test shape: {X_test.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Y_train shape: {Y_train.shape}, Y_test shape: {Y_test.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/utils/_param_validation.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    214\u001b[0m                     )\n\u001b[1;32m    215\u001b[0m                 ):\n\u001b[0;32m--> 216\u001b[0;31m                     \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mInvalidParameterError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m                 \u001b[0;31m# When the function is just a wrapper around an estimator, we allow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[0;34m(test_size, train_size, random_state, shuffle, stratify, *arrays)\u001b[0m\n\u001b[1;32m   2849\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2850\u001b[0m     \u001b[0mn_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_num_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2851\u001b[0;31m     n_train, n_test = _validate_shuffle_split(\n\u001b[0m\u001b[1;32m   2852\u001b[0m         \u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault_test_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.25\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2853\u001b[0m     )\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36m_validate_shuffle_split\u001b[0;34m(n_samples, test_size, train_size, default_test_size)\u001b[0m\n\u001b[1;32m   2479\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2480\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn_train\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2481\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   2482\u001b[0m             \u001b[0;34m\"With n_samples={}, test_size={} and train_size={}, the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2483\u001b[0m             \u001b[0;34m\"resulting train set will be empty. Adjust any of the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: With n_samples=0, test_size=0.1 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters."
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 499 image files, 998 mask files\n",
+            "Sample images: ['/content/hippocampus_dataset/aug/images/img_aug1.jpg', '/content/hippocampus_dataset/aug/images/img_aug10.jpg', '/content/hippocampus_dataset/aug/images/img_aug100.jpg']\n",
+            "Sample masks: ['/content/hippocampus_dataset/aug/masks/left/maskleft_aug1.jpg', '/content/hippocampus_dataset/aug/masks/left/maskleft_aug10.jpg', '/content/hippocampus_dataset/aug/masks/left/maskleft_aug100.jpg']\n",
+            "Attempting name-based pairing\n",
+            "Paired 499 image-mask pairs\n",
+            "X_train shape: (449, 128, 128, 3), X_test shape: (50, 128, 128, 3)\n",
+            "Y_train shape: (449, 128, 128, 1), Y_test shape: (50, 128, 128, 1)\n"
           ]
         }
       ]
