added Define Montage Function

--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPwWnEKIhHAIP+IXy19Pqvb",
+      "authorship_tag": "ABX9TyPXnq96nhN9qQHs1vjZKw1Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,6 +325,44 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Define Montage Function\n"
+      ],
+      "metadata": {
+        "id": "X996Tynf3OeH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Purpose: Create montages of images or masks for visualization.\n",
+        "def custom_montage(images, n_rows=5, n_cols=5, cmap='gray'):\n",
+        "    if len(images) == 0:\n",
+        "        return None\n",
+        "    images = images[:n_rows * n_cols]\n",
+        "    h, w = images.shape[1:3] if images.ndim == 4 else (images.shape[1], images.shape[2])\n",
+        "    if images.ndim == 4:\n",
+        "        images = images[..., 0] if images.shape[-1] == 1 else images\n",
+        "    montage = np.zeros((h * n_rows, w * n_cols, images.shape[-1] if images.ndim > 3 else 1), dtype=np.float32)\n",
+        "    for i in range(min(len(images), n_rows * n_cols)):\n",
+        "        r, c = divmod(i, n_cols)\n",
+        "        img = images[i]\n",
+        "        montage[r*h:(r+1)*h, c*w:(c+1)*w] = img[..., np.newaxis] if img.ndim == 2 else img\n",
+        "    plt.figure(figsize=(n_cols*2, n_rows*2))\n",
+        "    plt.imshow(montage.squeeze() if montage.shape[-1] == 1 else montage, cmap=cmap)\n",
+        "    plt.axis('off')\n",
+        "    return plt.gcf()\n",
+        "\n",
+        "print(\"Montage function defined.\")"
+      ],
+      "metadata": {
+        "id": "y4MDF6zY3L44"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
