--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN+kb14AnHRe8uD7OYkaQCa",
+      "authorship_tag": "ABX9TyM1Mx6aC6SLlBIhvs59Mav5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1758,6 +1758,94 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cell 8: Training\n"
+      ],
+      "metadata": {
+        "id": "W0YVWBSo4DHL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Purpose: Train ResUNet and U-Net (ResNet50) models with augmentation, save to Google Drive.\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "data_gen_args = dict(\n",
+        "    rotation_range=20,\n",
+        "    width_shift_range=0.2,\n",
+        "    height_shift_range=0.2,\n",
+        "    zoom_range=0.2,\n",
+        "    horizontal_flip=True,\n",
+        "    fill_mode='nearest'\n",
+        ")\n",
+        "image_datagen = ImageDataGenerator(**data_gen_args)\n",
+        "mask_datagen = ImageDataGenerator(**data_gen_args)\n",
+        "image_datagen.fit(X_train, augment=True, seed=seed)\n",
+        "mask_datagen.fit(Y_train, augment=True, seed=seed)\n",
+        "\n",
+        "batch_size = 8\n",
+        "drive_model_path = '/content/drive/MyDrive/Hippocampus_Models'\n",
+        "os.makedirs(drive_model_path, exist_ok=True)\n",
+        "callbacks = [\n",
+        "    keras.callbacks.ModelCheckpoint(os.path.join(drive_model_path, '{}.h5'), save_best_only=True, monitor='val_loss'),\n",
+        "    keras.callbacks.EarlyStopping(patience=10, monitor='val_loss'),\n",
+        "    keras.callbacks.TensorBoard(log_dir='logs_{}')\n",
+        "]\n",
+        "\n",
+        "if X_train.shape[0] > 0:\n",
+        "    resunet_results = resunet_model.fit(\n",
+        "        image_datagen.flow(X_train, Y_train, batch_size=batch_size, seed=seed),\n",
+        "        epochs=50,\n",
+        "        validation_data=(X_test, Y_test),\n",
+        "        # callbacks=[cb.format('ResUNet') for cb in callbacks]\n",
+        "    )\n",
+        "\n",
+        "if X_train.shape[0] > 0:\n",
+        "    unet_resnet50_results = unet_resnet50_model.fit(\n",
+        "        image_datagen.flow(X_train, Y_train, batch_size=batch_size, seed=seed),\n",
+        "        epochs=50,\n",
+        "        validation_data=(X_test, Y_test),\n",
+        "        callbacks=[cb.format('U-Net_ResNet50') for cb in callbacks]\n",
+        "    )\n",
+        "\n",
+        "print(\"Training complete. Models saved to Google Drive.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dzo9hxJk3-pf",
+        "outputId": "f94a2eb8-601a-412d-b40b-b2a41c0ea8ce"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/50\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+            "  self._warn_if_super_not_called()\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m 2/57\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m5s\u001b[0m 104ms/step - dice_coef: 0.7089 - iou: 0.5498 - loss: 0.6040 "
+          ]
         }
       ]
     }
